--- a/src/pug/layout/nav/nav-news.pug
+++ b/src/pug/layout/nav/nav-news.pug
@@ -1,6 +1,7 @@
 // ========== start nav========
 nav(class="navbar align-items-center mb-4")
 	include brand
-	include ../form/search
+	div(class='search')
+		include ../form/search
 	include navbar
 // ========== end nav========
