--- a/src/sass/clients.scss
+++ b/src/sass/clients.scss
@@ -21,6 +21,7 @@ $dir:ltr;
 		'./layout/section',
 		'./layout/slider',
 		'./layout/clients',
+		'./layout/clients-row',
 		'./layout/news',
 		'./layout/stories',
 		'./layout/footer';
