--- a/src/pug/layout/form/search.pug
+++ b/src/pug/layout/form/search.pug
@@ -1,5 +1,5 @@
 // search form
-form(id="search")
+form(class="search-form")
 	input(type="text" name="search" value="" placeholder="search..." id="searchInput")/
 	label(for="searchInput" aria-label="search")
 		<i class="fa fa-search" aria-hidden="true"></i>
