--- a/src/sass/form/_button.scss
+++ b/src/sass/form/_button.scss
@@ -49,7 +49,13 @@ button
 	{
 		color:$main-color;
 	}
-
+}
+@include media($max_lg)
+{
+	.button-grid
+	{
+		margin-top: 1em;
+	}
 }
 /*======================
 ====== end buttons style =======
