--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -20,8 +20,8 @@ header
 	}
 	.search
 	{
+		text-align: center;
 	    padding: 0.5em 1em;
-	    background-color: $main-color;
 	    height: 100%;
 	    @include flex(1, 0, auto);
 	}
